[Withdrawal Form] Fixed z-index bug in input-dropdown.

--- a/Swipe/css/swipe.less
+++ b/Swipe/css/swipe.less
@@ -1120,14 +1120,17 @@ input, textarea {
   }
 }
 .input-dropdown {
+  .position(relative, @z:10);
   .box-sizing(content-box);
-  position: relative;
+  .input-combo {
+    .position(relative, @z:2)
+  }
   .select2-container {
     left:0 !important;
     top:100% !important;
     width: 100%;
+    z-index: 1;
     .select2-dropdown {
-      margin-top: 1px;
       width: 100% !important;
       z-index: 999;
     }
